Cleaned files, Added message box and easteregg for Admin, Sorted out some Security

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -134,15 +134,15 @@
     "history": [
       {
         "file": "index.php",
-        "ctime": "2017-01-22T02:09:36.110Z",
-        "mtime": "2017-01-22T02:09:36.110Z",
-        "size": 954
+        "ctime": "2017-01-25T12:25:43.808Z",
+        "mtime": "2017-01-25T12:25:43.808Z",
+        "size": 1087
       },
       {
         "file": "startsida.php",
-        "ctime": "2017-01-22T02:09:36.913Z",
-        "mtime": "2017-01-22T02:09:36.913Z",
-        "size": 1564
+        "ctime": "2017-01-22T13:06:51.179Z",
+        "mtime": "2017-01-22T13:06:51.179Z",
+        "size": 1580
       },
       {
         "file": "bilder/grandcanyon.jpg",
@@ -164,15 +164,15 @@
       },
       {
         "file": "style.css",
-        "ctime": "2017-01-21T23:14:55.227Z",
-        "mtime": "2017-01-21T23:14:55.227Z",
-        "size": 4231
+        "ctime": "2017-01-25T19:20:13.923Z",
+        "mtime": "2017-01-25T19:20:13.923Z",
+        "size": 5275
       },
       {
         "file": "easteregg.js",
-        "ctime": "2017-01-22T02:09:34.833Z",
-        "mtime": "2017-01-22T02:09:34.833Z",
-        "size": 512
+        "ctime": "2017-01-22T11:49:14.149Z",
+        "mtime": "2017-01-22T11:49:14.149Z",
+        "size": 259
       },
       {
         "file": "hangman.html",
@@ -182,21 +182,129 @@
       },
       {
         "file": "cv.js",
-        "ctime": "2017-01-21T19:59:59.310Z",
-        "mtime": "2017-01-21T19:59:59.310Z",
-        "size": 582
+        "ctime": "2017-01-23T19:47:44.453Z",
+        "mtime": "2017-01-23T19:47:44.453Z",
+        "size": 82
       },
       {
         "file": "hangman.php",
-        "ctime": "2017-01-22T10:51:10.014Z",
-        "mtime": "2017-01-22T10:51:10.014Z",
-        "size": 994
+        "ctime": "2017-01-25T13:31:01.919Z",
+        "mtime": "2017-01-25T13:31:01.919Z",
+        "size": 248
       },
       {
         "file": "hangman.js",
-        "ctime": "2017-01-22T10:59:01.291Z",
-        "mtime": "2017-01-22T10:59:01.291Z",
-        "size": 1680
+        "ctime": "2017-01-23T14:48:22.003Z",
+        "mtime": "2017-01-23T14:48:22.003Z",
+        "size": 1969
+      },
+      {
+        "file": "nav.inc.php",
+        "ctime": "2017-01-23T20:01:40.999Z",
+        "mtime": "2017-01-23T20:01:40.999Z",
+        "size": 1280
+      },
+      {
+        "file": "Javascript/changetext.js",
+        "ctime": "2017-01-23T19:46:42.052Z",
+        "mtime": "2017-01-23T19:46:42.052Z",
+        "size": 331
+      },
+      {
+        "file": "cv.php",
+        "ctime": "2017-01-23T19:48:11.844Z",
+        "mtime": "2017-01-23T19:48:11.844Z",
+        "size": 2653
+      },
+      {
+        "file": "Javascript/cv.js",
+        "ctime": "2017-01-23T19:48:31.797Z",
+        "mtime": "2017-01-23T19:48:31.797Z",
+        "size": 82
+      },
+      {
+        "file": "Javascript/easteregg.js",
+        "ctime": "2017-01-25T13:00:56.072Z",
+        "mtime": "2017-01-25T13:00:56.072Z",
+        "size": 595
+      },
+      {
+        "file": "Javascript/hangman.js",
+        "ctime": "2017-01-25T14:33:17.422Z",
+        "mtime": "2017-01-25T14:33:17.422Z",
+        "size": 2086
+      },
+      {
+        "file": "Javascript/index.js",
+        "ctime": "2017-01-24T18:06:24.441Z",
+        "mtime": "2017-01-24T18:06:24.441Z",
+        "size": 627
+      },
+      {
+        "file": "resume.php",
+        "ctime": "2017-01-25T12:36:12.244Z",
+        "mtime": "2017-01-25T12:36:12.244Z",
+        "size": 2560
+      },
+      {
+        "file": "nav.php",
+        "ctime": "2017-01-25T19:02:12.470Z",
+        "mtime": "2017-01-25T19:02:12.470Z",
+        "size": 1287
+      },
+      {
+        "file": "aboutme.php",
+        "ctime": "2017-01-24T16:20:48.792Z",
+        "mtime": "2017-01-24T16:20:48.792Z",
+        "size": 2026
+      },
+      {
+        "file": "footer.php",
+        "ctime": "2017-01-25T19:10:18.818Z",
+        "mtime": "2017-01-25T19:10:18.818Z",
+        "size": 593
+      },
+      {
+        "file": "message.php",
+        "ctime": "2017-01-25T10:13:30.311Z",
+        "mtime": "2017-01-25T10:13:30.311Z",
+        "size": 1427
+      },
+      {
+        "file": "login.php",
+        "ctime": "2017-01-24T20:37:56.640Z",
+        "mtime": "2017-01-24T20:37:56.640Z",
+        "size": 995
+      },
+      {
+        "file": "savetext.php",
+        "ctime": "2017-01-25T10:51:40.287Z",
+        "mtime": "2017-01-25T10:51:40.287Z",
+        "size": 313
+      },
+      {
+        "file": "frontpage.php",
+        "ctime": "2017-01-25T11:55:31.619Z",
+        "mtime": "2017-01-25T11:55:31.619Z",
+        "size": 1337
+      },
+      {
+        "file": "portfolio.php",
+        "ctime": "2017-01-25T10:50:18.673Z",
+        "mtime": "2017-01-25T10:50:18.673Z",
+        "size": 701
+      },
+      {
+        "file": "header.inc/header.frontpage.php",
+        "ctime": "2017-01-25T11:57:23.032Z",
+        "mtime": "2017-01-25T11:57:23.032Z",
+        "size": 243
+      },
+      {
+        "file": "includes/header.php",
+        "ctime": "2017-01-25T12:38:43.201Z",
+        "mtime": "2017-01-25T12:38:43.201Z",
+        "size": 243
       }
     ]
   },
