Cleaned up, added som more security

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -134,9 +134,9 @@
     "history": [
       {
         "file": "index.php",
-        "ctime": "2017-01-25T12:25:43.808Z",
-        "mtime": "2017-01-25T12:25:43.808Z",
-        "size": 1087
+        "ctime": "2017-01-29T11:55:05.280Z",
+        "mtime": "2017-01-29T11:55:05.280Z",
+        "size": 1107
       },
       {
         "file": "startsida.php",
@@ -164,9 +164,9 @@
       },
       {
         "file": "style.css",
-        "ctime": "2017-01-26T12:26:04.040Z",
-        "mtime": "2017-01-26T12:26:04.040Z",
-        "size": 5349
+        "ctime": "2017-01-29T14:34:15.878Z",
+        "mtime": "2017-01-29T14:34:15.878Z",
+        "size": 5987
       },
       {
         "file": "easteregg.js",
@@ -188,9 +188,9 @@
       },
       {
         "file": "hangman.php",
-        "ctime": "2017-01-26T12:28:09.788Z",
-        "mtime": "2017-01-26T12:28:09.788Z",
-        "size": 345
+        "ctime": "2017-01-29T11:52:36.168Z",
+        "mtime": "2017-01-29T11:52:36.168Z",
+        "size": 517
       },
       {
         "file": "hangman.js",
@@ -224,57 +224,57 @@
       },
       {
         "file": "Javascript/easteregg.js",
-        "ctime": "2017-01-25T13:00:56.072Z",
-        "mtime": "2017-01-25T13:00:56.072Z",
-        "size": 595
+        "ctime": "2017-01-29T11:34:21.932Z",
+        "mtime": "2017-01-29T11:34:21.932Z",
+        "size": 431
       },
       {
         "file": "Javascript/hangman.js",
-        "ctime": "2017-01-26T12:08:55.673Z",
-        "mtime": "2017-01-26T12:08:55.673Z",
-        "size": 2041
+        "ctime": "2017-01-29T11:43:54.125Z",
+        "mtime": "2017-01-29T11:43:54.125Z",
+        "size": 2376
       },
       {
         "file": "Javascript/index.js",
-        "ctime": "2017-01-24T18:06:24.441Z",
-        "mtime": "2017-01-24T18:06:24.441Z",
-        "size": 627
+        "ctime": "2017-01-29T11:47:35.433Z",
+        "mtime": "2017-01-29T11:47:35.433Z",
+        "size": 608
       },
       {
         "file": "resume.php",
-        "ctime": "2017-01-25T12:36:12.244Z",
-        "mtime": "2017-01-25T12:36:12.244Z",
-        "size": 2560
+        "ctime": "2017-01-29T14:23:26.275Z",
+        "mtime": "2017-01-29T14:23:26.275Z",
+        "size": 2819
       },
       {
         "file": "nav.php",
-        "ctime": "2017-01-25T19:02:12.470Z",
-        "mtime": "2017-01-25T19:02:12.470Z",
-        "size": 1287
+        "ctime": "2017-01-29T14:20:44.704Z",
+        "mtime": "2017-01-29T14:20:44.704Z",
+        "size": 1162
       },
       {
         "file": "aboutme.php",
-        "ctime": "2017-01-24T16:20:48.792Z",
-        "mtime": "2017-01-24T16:20:48.792Z",
-        "size": 2026
+        "ctime": "2017-01-28T20:09:47.530Z",
+        "mtime": "2017-01-28T20:09:47.530Z",
+        "size": 876
       },
       {
         "file": "footer.php",
-        "ctime": "2017-01-26T12:15:41.702Z",
-        "mtime": "2017-01-26T12:15:41.702Z",
-        "size": 553
+        "ctime": "2017-01-28T20:10:43.084Z",
+        "mtime": "2017-01-28T20:10:43.084Z",
+        "size": 530
       },
       {
         "file": "message.php",
-        "ctime": "2017-01-25T10:13:30.311Z",
-        "mtime": "2017-01-25T10:13:30.311Z",
-        "size": 1427
+        "ctime": "2017-01-29T14:11:16.235Z",
+        "mtime": "2017-01-29T14:11:16.235Z",
+        "size": 1291
       },
       {
         "file": "login.php",
-        "ctime": "2017-01-24T20:37:56.640Z",
-        "mtime": "2017-01-24T20:37:56.640Z",
-        "size": 995
+        "ctime": "2017-01-29T11:59:53.760Z",
+        "mtime": "2017-01-29T11:59:53.760Z",
+        "size": 1005
       },
       {
         "file": "savetext.php",
@@ -284,15 +284,15 @@
       },
       {
         "file": "frontpage.php",
-        "ctime": "2017-01-25T11:55:31.619Z",
-        "mtime": "2017-01-25T11:55:31.619Z",
-        "size": 1337
+        "ctime": "2017-01-29T15:12:27.965Z",
+        "mtime": "2017-01-29T15:12:27.965Z",
+        "size": 1198
       },
       {
         "file": "portfolio.php",
-        "ctime": "2017-01-25T10:50:18.673Z",
-        "mtime": "2017-01-25T10:50:18.673Z",
-        "size": 701
+        "ctime": "2017-01-29T14:21:51.180Z",
+        "mtime": "2017-01-29T14:21:51.180Z",
+        "size": 675
       },
       {
         "file": "header.inc/header.frontpage.php",
@@ -305,6 +305,18 @@
         "ctime": "2017-01-25T12:38:43.201Z",
         "mtime": "2017-01-25T12:38:43.201Z",
         "size": 243
+      },
+      {
+        "file": "logout.php",
+        "ctime": "2017-01-29T12:00:03.814Z",
+        "mtime": "2017-01-29T12:00:03.814Z",
+        "size": 91
+      },
+      {
+        "file": "Javascript/resume.js",
+        "ctime": "2017-01-29T15:17:41.180Z",
+        "mtime": "2017-01-29T15:17:41.180Z",
+        "size": 156
       }
     ]
   },
